Add water data administration functionality
